--- a/htmlPro/.vscode/launch.json
+++ b/htmlPro/.vscode/launch.json
@@ -4,6 +4,7 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         // {
         //     "type": "chrome",
         //     "request": "launch",
@@ -22,7 +23,13 @@
             "name": "Launch index.html",
             "type": "chrome",
             "request": "launch",
-            "file": "${workspaceFolder}/Test2.html"
+            "file": "${workspaceFolder}/index.html"
         },
+        // {
+        //     "name": "Launch index.html",
+        //     "type": "chrome",
+        //     "request": "launch",
+        //     "file": "F:/server/wamp/www/index.php"
+        // },
     ]
 }
